[package]
name = "ghas-reviewer-app"
version = "0.5.0"
edition = "2021"

authors = ["GitHub's Field Security Specialist Team"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.13", features = ["derive", "env"] }
console = "0.15"
dotenvy = { version = "0.15" }
env_logger = "0.11"
figment = { version = "0.10", features = ["yaml", "env"] }
log = "0.4"
octoapp = { version = "0.2.1", features = ["rocket"] }
# octocrab = "^0.39"
octocrab = { path = "../../open-source/octocrab" }
rocket = { version = "^0.5", features = ["json"] }
serde = "1"
serde_json = "1.0.122"
serde_yaml = "0.9"
